@@ -2,6 +2,9 @@
   ChangeLog for the eggleton-tools repository.  
   Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
    
+   143: AstroFloyd, 25/08/2010
+     - added global variable libdir and read it from settings file
+     
    142: AstroFloyd, 23/08/2010
      - plotmdl: clean up a little
      
